# rust-snake

./: .gitignore  Cargo.toml  README.md  bindgen-cmd  index.html
.cargo/: config.toml
src/: cheats.rs  debug.rs  food.rs  game_mode.rs  lib.rs  main.rs  score.rs  snake.rs  ui.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
