workspace = { members = ["xtask"] }
[package]
name = "rust-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["bevy_render","bevy_asset","bevy_sprite","bevy_text","bevy_ui","bevy_winit","webgl2"], default-features = false }

console_error_panic_hook = "0.1.7"
futures = { version = "0.3.30", features = ["std", "async-await"], default-features = false }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.24", features = ["json", "blocking", "default-tls"], default-features = false }
serde = { version = "1.0.196", features = ["serde_derive"], default-features = false }
serde_json = { version = "1.0.113", default-features = false }
tokio = { version = "1.36.0", features = ["rt"], default-features = false }
wasm-bindgen-futures = { version = "0.4.41", default-features = false }
wasm-logger = { version = "0.2.0", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3

[profile.release-wasm]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1

